# multiversion

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  criterion.toml
.github/workflows/: ci.yml
benches/: square.rs
benches/benchmarks/: mod.rs  square.rs
implied-features/: Cargo.toml  implied-features.txt
implied-features/generate/src/: main.rs
implied-features/list-features/: Cargo.toml
implied-features/list-features/src/: main.rs
multiversion/: Cargo.toml  build.rs
multiversion-bench/: Cargo.toml
multiversion-bench/benches/: bench_main.rs
multiversion-bench/benches/benchmarks/: generics.rs  mod.rs  square.rs
multiversion-bench/src/: lib.rs
multiversion-macros/: Cargo.toml  README.md  build.rs  implied-features.txt
multiversion-macros/src/: cfg.rs  dispatch.rs  dispatcher.rs  lib.rs  match_target.rs  meta.rs  multiversion.rs  static_dispatch.rs  target.rs  target_cfg.rs  util.rs
multiversion/benches/: benchmark.rs
multiversion/src/: arch.rs  features.rs  lib.rs
multiversion/tests/: async_fn.rs  attrs.rs  cfg.rs  choose_dispatcher.rs  clones.rs  crate_path.rs  destructure.rs  feature_detection.rs  generics.rs  helpers.rs  impl_trait.rs  multiversion.rs  selected_target.rs  simd.rs  static_dispatch.rs
src/: dispatcher.rs  functions.rs  helper_attributes.rs  lib.rs  meta.rs  multiclones.rs  multiversion.rs  safe_inner.rs  static_dispatch.rs  target.rs  target_cfg.rs  target_clones.rs  util.rs
tests/: async_fn.rs  clones.rs  destructure.rs  generics.rs  multiclones.rs  multifeature.rs  multiversion.rs  static_dispatch.rs  target_clones.rs
