[package]
name = "multiversion"
version = "0.1.1"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Easy function multiversioning"
repository = "https://github.com/calebzulawski/multiversion"
categories = ["hardware-support"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
lazy_static = "1"
regex = "1"

[dev-dependencies]
criterion = "0.2.11"
rand = "0.5"

[[bench]]
name = "square"
harness = false

[profile.bench]
opt-level = 3

[badges]
appveyor = { repository = "calebzulawski/multiversion" }
travis-ci = { repository = "calebzulawski/multiversion" }
