[package]
name = "multiversion"
version = "0.3.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Easy function multiversioning"
repository = "https://github.com/calebzulawski/multiversion"
categories = ["hardware-support"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
regex = "1"
once_cell = "1"

[dev-dependencies]
criterion = "0.2.11"
rand = "0.5"
rustversion = "1"

[[bench]]
name = "bench_main"
harness = false
path = "benches"

[profile.bench]
opt-level = 3

[badges]
appveyor = { repository = "calebzulawski/multiversion" }
travis-ci = { repository = "calebzulawski/multiversion" }
