[package]
name = "multiversion-bench"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"
publish = false

[dev-dependencies]
multiversion = { path = ".." }
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "bench_main"
harness = false

[profile.bench]
opt-level = 3
