[package]
name = "multiversion-bench"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
multiversion = { path = "../multiversion" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "bench_main"
harness = false
