[package]
name = "multiversion"
version = "0.5.1"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Easy function multiversioning"
repository = "https://github.com/calebzulawski/multiversion"
categories = ["hardware-support", "no-std"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
edition = "2018"

[features]
default = ["runtime_dispatch"]
runtime_dispatch = ["multiversion-macros/runtime_dispatch"]

[dependencies]
multiversion-macros = { version = "0.1", path = "../multiversion-macros", default-features = false }

[dev-dependencies]
rustversion = "1"
