[package]
name = "multiversion"
version = "0.6.1"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Easy function multiversioning"
repository = "https://github.com/calebzulawski/multiversion"
categories = ["hardware-support", "no-std"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
edition = "2021"

[features]
default = ["std"]
std = ["multiversion-macros/std"]

[dependencies]
multiversion-macros = { version = "0.6.1", path = "../multiversion-macros", default-features = false }
target-features = { git = "https://github.com/calebzulawski/target-features" }

[dev-dependencies]
rustversion = "1"
